force-app/main/default/objects/Transaction_Order__c/Transaction_Order__c.object-meta.xml
<CustomObject>
    <description>Tracking the order for an individual or company.</description>
    <label>Transaction Order</label>
    <nameField>
        <displayFormat>TRO-{00000}</displayFormat>
        <label>Transaction Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>