force-app/main/default/objects/Transaction_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional - Lookup to an account (company) who is purchasing</description>
    <inlineHelpText>Optional - Lookup to an account (company) who is purchasing</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>