force-app/main/default/objects/Transaction_Order__c/fields/Agreed_To_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Agreed_To_Terms_And_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed To Terms And Conditions</label>
    <type>Checkbox</type>
</CustomField>