force-app/main/default/objects/Transaction_Order__c/fields/Apply_Non_Repayable_FA__c.field-meta.xml
<CustomField>
    <fullName>Apply_Non_Repayable_FA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to apply Non Repayable Financial Aid transaction payments on transaction orders.</description>
    <inlineHelpText>Indicator to apply Non Repayable Financial Aid transaction payments on transaction orders.</inlineHelpText>
    <label>Apply Non Repayable FA</label>
    <type>Checkbox</type>
</CustomField>