force-app/main/default/objects/Transaction_Order__c/fields/Apply_Payment__c.field-meta.xml
<CustomField>
    <fullName>Apply_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to apply payment on the transaction order.</description>
    <inlineHelpText>Indicator to apply payment (except repayable or non repayable financial aid disbursement) on the transaction order.</inlineHelpText>
    <label>Apply Payment</label>
    <type>Checkbox</type>
</CustomField>