force-app/main/default/objects/Transaction_Order__c/fields/Disburse_Non_Repayable_FA__c.field-meta.xml
<CustomField>
    <fullName>Disburse_Non_Repayable_FA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to apply non repayable financial aid payment on the transaction order.</description>
    <inlineHelpText>Indicator to apply non repayable financial aid payment on the transaction order.</inlineHelpText>
    <label>(Obsolete) Disburse Non Repayable FA</label>
    <type>Checkbox</type>
</CustomField>