force-app/main/default/objects/Transaction_Order__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The due date to for the transaction order. The due date will be inherited from the academic term&apos;s fee due date.</description>
    <inlineHelpText>The due date to for the transaction order.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>