force-app/main/default/objects/Transaction_Order__c/fields/Individual_Academic_Progress__c.field-meta.xml
<CustomField>
    <fullName>Individual_Academic_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Academic Progress</label>
    <referenceTo>Individual_Academic_Progress__c</referenceTo>
    <relationshipLabel>Transaction Orders</relationshipLabel>
    <relationshipName>Transaction_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>