force-app/main/default/objects/Transaction_Order__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF(  Total_Amount__c &gt; 0,
  IF( Total_Outstanding_Amount__c &lt;= 0,
    &apos;Paid&apos;, 
    IF( Total_Outstanding_Amount__c &gt; 0 &amp;&amp;  Total_Paid_Amount__c &gt; 0, 
      &apos;Partially Paid&apos;,
      &apos;Not Paid&apos;
    )
  ),
  &apos;No Payment Required&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>