force-app/main/default/objects/Transaction_Order__c/fields/Payment_Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_Label__c</fullName>
    <description>The label for payment status.</description>
    <formula>CASE( Payment_Status__c , &apos;Not Paid&apos;, $Label.reduivy__Payment_Status_Not_Paid, &apos;Partially Paid&apos;, $Label.reduivy__Payment_Status_Partially_Paid, &apos;Paid&apos;, $Label.reduivy__Payment_Status_Paid, $Label.reduivy__Payment_Status_No_Payment_Required)</formula>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>