force-app/main/default/objects/Transaction_Order__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the primary transaction order for an academic term.</description>
    <inlineHelpText>Indicates the primary transaction order for an academic term.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>