force-app/main/default/objects/Transaction_Order__c/fields/Total_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>