force-app/main/default/objects/Transaction_Order__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>