force-app/main/default/objects/Transaction_Order__c/fields/Transaction_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status_Date__c</fullName>
    <label>Transaction Status Date</label>
    <type>DateTime</type>
</CustomField>