force-app/main/default/objects/Transaction_Order__c/fields/Voucher_Codes__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Codes__c</fullName>
    <description>Voucher codes selected on the checkout component separated by semi-colon, e.g., CODEA;CODEB.</description>
    <inlineHelpText>Voucher codes selected on the checkout component separated by semi-colon, e.g., CODEA;CODEB.</inlineHelpText>
    <label>Voucher Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>