force-app/main/default/objects/Transaction_Order__c/validationRules/Prevent_Total_Amount_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Total_Amount_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Confirmed&apos;),
    ISCHANGED( Total_Amount__c ) 
)</errorConditionFormula>
    <errorMessage>You cannot update the amount because the Transaction Order Status is set to Confirmed.</errorMessage>
</ValidationRule>