force-app/main/default/objects/Transaction_Order__c/listViews/This_Weeks_New_Orders.listView-meta.xml
<ListView>
    <fullName>This_Weeks_New_Orders</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week&apos;s New Orders</label>
</ListView>